[package]
name = "sni-bypass-rs"
version = "0.1.0"
edition = "2021"
description = "DPI bypass: fake-SNI TCP desync + TLS ClientHello fragmentation (dual-layer)"

[[bin]]
name = "sni-bypass-rs"
path  = "src/main.rs"

[dependencies]
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror        = "2"
socket2          = "0.5"
tokio-util       = "0.7"
rand             = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix  = { version = "0.29", features = ["net", "ioctl"] }

[target.'cfg(windows)'.dependencies]
windivert = { version = "0.7.0-beta", features = ["static"] }

[profile.release]
opt-level     = 3
strip         = true
lto           = true
codegen-units = 1
