[package]
name = "sni-bypass-rs-tui"
version = "0.2.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["dangerous_configuration"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"

# HTTP/Proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

# DNS
hickory-resolver = "0.24"

# Channels
flume = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
